# j-melotts-cpp

./: README.md
MeloTTS.cpp/: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  README.zh-TW.md  inputs_en.txt  inputs_zh.txt  melo.cpp  run_tts_en.bat  run_tts_en.sh  run_tts_zh.bat  run_tts_zh.sh
MeloTTS.cpp/benchmark/: benchmark_bert_py.bat  benchmark_tts.bat  bert.npy  ja_bert.npy  lang_ids.npy  noise_scale.npy  noise_scale_w.npy  phones.npy  tones.npy
MeloTTS.cpp/demo_audio/: README.md
MeloTTS.cpp/experimental/mini-bart-g2p/: README.md
MeloTTS.cpp/experimental/mini-bart-g2p/text2text-generation/: config.json  generation_config.json  openvino_decoder_model.xml  openvino_decoder_with_past_model.xml  openvino_encoder_model.xml  vocab.json
MeloTTS.cpp/ov_models/: bert_EN_int8.xml  bert_ZH_int8.xml  bert_ZH_static_int8.xml  cmudict_cache.txt  punc.dic  tts_en.xml  tts_zn_mix_en.xml  tts_zn_mix_en_int8.xml  vocab_bert.txt
MeloTTS.cpp/ov_models/bert-base-multilingual-uncased/: README.md  create_tokenizer_for_subword_i64.py  openvino_detokenizer.xml  openvino_tokenizer.xml  test_openvino_tokenizer.py
MeloTTS.cpp/ov_models/bert-base-uncased/: openvino_detokenizer.xml  openvino_tokenizer.xml
MeloTTS.cpp/ov_models/deepfilternet3/: df_dec.xml  enc.xml  erb_dec.xml
MeloTTS.cpp/ov_models/mini-bart-g2p-no_cache/: config.json  openvino_decoder_model.xml  openvino_encoder_model.xml  tokenizer.json  tokenizer_config.json
MeloTTS.cpp/scripts/: convert_bert_en.py  read_pickle.py  reshape_bert_for_npu.py  vocab_deal.py  zh_mix_en_egs_text.txt
MeloTTS.cpp/src/: bert.cpp  bert.h  info_data.h  openvino_model_base.cpp  openvino_model_base.h  openvino_tokenizer.cpp  openvino_tokenizer.h  openvino_torch_utils.h  openvoice_tts.cpp  openvoice_tts.h  parse_args.h  tokenizer.cpp  tokenizer.h  tts.cpp  tts.h  utils.cpp  utils.h
MeloTTS.cpp/src/deepfilternet/: README.md  deepfilter.cpp  deepfilter.h  dfnet_model.cpp  dfnet_model.h  multiframe.cpp  multiframe.h  noisefilter.cpp  noisefilter.h
MeloTTS.cpp/src/language_modules/: chinese_mix.cpp  chinese_mix.h  cmudict.cpp  cmudict.h  english.cpp  english.h  language_module_base.cpp  language_module_base.h  tone_sandhi.cpp  tone_sandhi.h
MeloTTS.cpp/src/mini-bart-g2p/: mini-bart-g2p.cpp  mini-bart-g2p.h
MeloTTS.cpp/src/text_normalization/: num.cpp  text_normalization_eng.cpp
MeloTTS.cpp/tests/: CMakeLists.txt  README.md  test_bert.cpp  test_bert_en.cpp  test_chinese_mix.cpp  test_cmudict.cpp  test_cppinyin.cpp  test_cppjieba.cpp  test_darts.cpp  test_mini-bart-g2p.cpp  test_openvino_tokenizer.cpp  test_openvoice_tts.cpp  test_openvoice_tts_en.cpp  test_split_sentence.cpp  test_text_normalization_en.cpp  test_tokenizer.cpp
